--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL=http://localhost:3000
+DB_URL=mongodb+srv://solomonikandrey:123@cluster0.verutqr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+BASE_URL=https://cut-url-de2521710463.herokuapp.com
